--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.8.6",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "react": "^16.12.0",
-    "@hot-loader/react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.1.3",
+    "regenerator-runtime": "^0.13.3",
     "styled-components": "^5.0.1"
   }
 }
