--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.12.0",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.3",
