--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-hot-loader": "^4.12.19",
     "react-redux": "^7.2.0",
